# mysql-explorer

./: .env  README.md  README_ENV.md  README_mysql.md  SAMPLING_GUIDE.md  config.json  env.example  mysql_config_example.txt  mysql_explorer.py  pyproject.toml  requirements.txt  run_mysql_sse.py  sqlite_explorer.py
mysql_explorer_sse/: README_SSE.md  __init__.py  config_example.txt  mcp-config-example.json  mysql_explorer_sse.py  run_sse_server.py  start_sse.py
temp_data/: E研一deepseekmcpsqlite-explorer-fastmcp-mcp-servertemp_datafuel_data.json  E研一deepseekmcpsqlite-explorer-fastmcp-mcp-servertemp_datalaunch_stats.json  E研一deepseekmcpsqlite-explorer-fastmcp-mcp-servertemp_datasatellite4_fuel_data.json  query_20250603_161245_SELECT_Name_Milliseconds_AlbumId_FROM_track_ORDE.json  query_20250603_161251_SELECT_Name_Milliseconds_AlbumId_FROM_track_ORDE.json  query_20250603_161312_SELECT_TrackId_Milliseconds_FROM_track_ORDER_BY_M.json  query_20250603_161319_SELECT_TrackId_FROM_track_LIMIT_10000.json  query_20250603_161806_SELECT_TrackId_Name_Milliseconds_FROM_track_ORDE.json  query_20250603_163110_SELECT_Name_Milliseconds_FROM_track_ORDER_BY_Mill.json  query_20250605_180937_SELECT_send_year_COUNTDISTINCT_send_name_AS_mod.json  query_20250605_181625_SELECT_incident_type_COUNT_AS_count_ROUNDCOU.json  query_20250605_181951_SELECT_CONCATYEARrecord_time_-_LPADMONTHr.json  query_20250605_182035_SELECT_CONCATYEARrecord_time_-_LPADMONTHr.json  query_20250605_183713_SELECT_record_time_AS_timestamp_residual_propulsi.json  satellite_fuel_data.json  simple_test.json  top_tracks.json  (+8 more)
