[project]
name = "sqlite-explorer-fastmcp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.1",
    "mcp[cli]>=1.9.1",
    "pymysql>=1.1.1",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mysql-explorer-sse = "mysql_explorer_sse.mysql_explorer_sse:main"
